--- a/src/app/components/pages/not-found/not-found.component.html
+++ b/src/app/components/pages/not-found/not-found.component.html
@@ -1,10 +1,10 @@
 <section class="bg-white">
-    <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
+    <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6 mb-6">
         <div class="mx-auto max-w-screen-sm text-center m-10">
             <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-primary-600">404</h1>
             <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl">Ой, щось пішло не так.</p>
             <p class="mb-4 text-lg font-light text-gray-500">Вибачте, така сторінка не знайдена. На домашній сторінці ви знайдете усі посилання. </p>
-            <a routerLink="/" class="m-7 inline-flex text-white bg-tahiti hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Back to Homepage</a>
+            <a routerLink="/" class="m-7 inline-flex text-white bg-tahiti hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Повернутись до головної</a>
         </div>   
     </div>
 </section>
