--- a/src/app/components/pages/guide/guide.component.html
+++ b/src/app/components/pages/guide/guide.component.html
@@ -18,7 +18,15 @@
         <div class="my-10">
             <p>Організація лабораторних досліджень, а саме здачі діагностичних тестів складається з декількох етапів:</p>
             <!-- Component: Activity feed -->
-            <ul aria-label="Activity feed" role="feed" class="relative flex flex-col gap-12 py-12 pl-8 before:absolute before:top-0 before:left-8 before:h-full before:border before:-translate-x-1/2 before:border-violet before:border-dashed after:absolute after:top-6 after:left-8 after:bottom-6 after:border after:-translate-x-1/2 after:border-violet ">
+            <ul role="feed" class="relative flex flex-col gap-12 py-12 pl-8 before:absolute before:top-0 before:left-8 before:h-full  before:border-violet  after:absolute after:top-6 after:left-8 after:bottom-6 after:border after:-translate-x-1/2 after:border-violet ">
+                <div class="absolute top-0 left-8 h-full flex flex-col items-center gap-1 -translate-x-1/2">
+                    <!-- Первая точка -->
+                    <span class="w-1.5 h-1.5 bg-violet rounded-full"></span>
+                    <!-- Вторая точка -->
+                    <span class="w-2 h-2 bg-violet rounded-full"></span>
+                    <!-- Третья точка -->
+                    <span class="w-2.5 h-2.5 bg-violet rounded-full"></span>
+                  </div>
                 <li role="article" class="relative pl-8 ">
                 <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-light-green ">
                     <svg stroke-width="1" class="w-5 h-5" role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg>
@@ -90,6 +98,12 @@
                         <p class="text-base text-slate-500">Реквізити на оплату після отримання матеріалу.</p>
                     </div>
                     </li>
+
+                    <div class="absolute -bottom-1 left-8 h-full flex flex-col-reverse    items-center gap-1 -translate-x-1/2">
+                        <span class="w-2.5 h-2.5 bg-violet rounded-full"></span>
+                        <span class="w-2 h-2 bg-violet rounded-full"></span>
+                        <span class="w-1.5 h-1.5 bg-violet rounded-full"></span>
+                    </div>
             </ul>
             <!-- End Activity feed -->
         </div>
