--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -8,7 +8,7 @@
             {{ title }}
         </h2>
     </div>
-    <div class="flex flex-wrap justify-between  sm:py-10 xl:py-0 my-10">
+    <div class="flex flex-wrap justify-between  sm:py-10 xl:py-0 my-6 lg:my-10">
         <div class="mb-8">
             <p class="py-4">Ви можете зв&rsquo;язатися з нами наступними способами:</p>
 
@@ -18,8 +18,8 @@
                         <path d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"></path>
                     </svg>
                 </div>
-                <div class="flex flex-wrap">
-                    <div class="mx-4 mb-2">
+                <div class="flex flex-wrap mb-2">
+                    <div class="mx-4">
                         <p class="text-sm text-gray-850">Логістика та сплата</p>
                         <a href="tel:+380962986084">+38-096-298-60-84</a>
                     </div>
@@ -38,7 +38,7 @@
                     </svg>
                 </div>
                 <div class="flex flex-wrap items-center">
-                    <div class="mx-4 mb-2">
+                    <div class="mx-4">
                         <p class="text-sm text-gray-850">Основна пошта</p>
                         <a href="mailto:green.laboratoriya@gmail.com">green.laboratoriya&#64;gmail.com</a>
                     </div>
