--- a/src/app/components/pages/guide/guide.component.html
+++ b/src/app/components/pages/guide/guide.component.html
@@ -25,7 +25,7 @@
                     <span class="w-2.5 h-2.5 bg-sky rounded-full"></span>
                   </div>
                 <li role="article" class="relative pl-8 ">
-                <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-light-green ">
+                <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-purple-100 ">
                     <svg stroke-width="1" class="w-5 h-5" role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg>
                 </span>
                 <div class="flex flex-col flex-1 gap-0">
@@ -45,7 +45,7 @@
                 </div>
                 </li>
                 <li role="article" class="relative pl-8 ">
-                <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-light-green ">
+                <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-purple-100 ">
                     <svg stroke-width="1.5" stroke="currentColor" class="w-7 h-7" role="presentation" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><defs><style>.cls-1{fill:none;stroke:#000;stroke-linecap:round;stroke-linejoin:round;stroke-width:2px}</style></defs><path class="cls-1" d="M16 10h16v6H16zM30.5 19.49V16h-13v3.49L6.2 34.83A5.76 5.76 0 0 0 10.83 44h26.34a5.76 5.76 0 0 0 4.63-9.17zM17.96 4l1.48 6h9.18l1.42-6H17.96z"/><path class="cls-1" d="M11.54 27.58A43.37 43.37 0 0 0 25 30c7 0 12.72-.82 10.36-3.91S18 27 17 29"/><path class="cls-1" d="M-632-20H68v700h-700z"/></svg>
                 </span>
                 <div class="flex flex-col flex-1 gap-0">
@@ -56,7 +56,7 @@
                 </div>
                 </li>
                 <li role="article" class="relative pl-8 ">
-                    <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-light-green ">
+                    <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-purple-100 ">
                         <svg stroke-width="1.5" stroke="currentColor" class="w-7 h-7" role="presentation" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><defs><style>.cls-1{fill:none;stroke:#000;stroke-linecap:round;stroke-linejoin:round;stroke-width:2px}</style></defs><path class="cls-1" d="M31 11V4M38 11h-7M19 11v4M21 13h-4"/><circle class="cls-1" cx="19" cy="13" r="5"/><path class="cls-1" d="M14 24h20M14 29h20M14 34h20M38 44H10V4h21l7 7v33z"/><path class="cls-1" d="M-428-224h700v700h-700z"/></svg>
                     </span>
                     <div class="flex flex-col flex-1 gap-0">
@@ -65,7 +65,7 @@
                             відправляються в лабораторію) (див. <a routerLink="/marking" class="underline">Маркування проб</a>)</p>
                         <p>&ndash; заповніть направлення для дослідження</p>
                         <div class="inline">
-                            <a href="../../../../assets/files/blank.pdf" download class="gradient-button-green "><img width="20" class="float-left mr-2"
+                            <a href="../../../../assets/files/blank.pdf" download class="gradient-button-green "><img width="20" class="float-left mr-1"
                                 src="https://img.icons8.com/fluency-systems-regular/48/download--v1.png" alt="Направлення на дослідження" />
                                 Завантажити направлення
                             </a>
@@ -73,7 +73,7 @@
                     </div>
                     </li>
                 <li role="article" class="relative pl-8 ">
-                <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-light-green ">
+                <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-purple-100 ">
                     <svg stroke-width="1.5" class="w-8 h-8" role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><g data-name="fast delivery"><path stroke-linecap="round" stroke-linejoin="round" d="M29 9.72a1 1 0 0 0-.64-1.17L18 5.05a1 1 0 0 0-.58 0 1.42 1.42 0 0 0-.2 0H13a1 1 0 0 0 0 2h1.87L8.65 12H3a1 1 0 0 0 0 2h5.86L19 16.87v8.82L9.26 23A.75.75 0 0 0 9 23H3a1 1 0 0 0 0 2h5.87l10.87 3a.75.75 0 0 0 .26 0 1.13 1.13 0 0 0 .32-.05.89.89 0 0 0 .27-.15l8-6.18a1 1 0 0 0 .39-.79V10a.86.86 0 0 0 .02-.28zm-17.86 2.85 6.77-5.45L26.36 10l-6.51 5zM27 20.33 21 25v-8.33L27 12z"/><path d="M5 7h5a1 1 0 0 0 0-2H5a1 1 0 0 0 0 2zM10 20a1 1 0 0 0 0-2H5a1 1 0 0 0 0 2z"/></g></svg>
                 </span>
                 <div class="flex flex-col flex-1 gap-0">
@@ -81,11 +81,11 @@
                     <p class="text-base text-slate-500">Після того, як матеріал буде готовий до відправки в лабораторію, звяжіться з нами для доставки у
                         лабораторію за телефоном (див. <a routerLink="/contact" class="underline">Контакти</a>). Зразки доставляються в
                         лабораторію в день відбіру або на наступний день <strong>"Новою поштою"</strong> за адресою: </p>
-                    <p><i class="bg-light-green2 px-2">Нова пошта №1, м.Чорноморськ, 0962986084, отримувач Зелена Ольга Валеріївна</i></p>
+                    <p><i class="bg-purple-1002 px-2">Нова пошта №1, м.Чорноморськ, 0962986084, отримувач Зелена Ольга Валеріївна</i></p>
                 </div>
                 </li>
                 <li role="article" class="relative pl-8 ">
-                    <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-light-green ">
+                    <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-purple-100 ">
                         <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 576 512" stroke-width="1.5"  class="w-6 h-6" role="presentation">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M512 80c8.8 0 16 7.2 16 16l0 32L48 128l0-32c0-8.8 7.2-16 16-16l448 0zm16 144l0 192c0 8.8-7.2 16-16 16L64 432c-8.8 0-16-7.2-16-16l0-192 480 0zM64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l448 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zm56 304c-13.3 0-24 10.7-24 24s10.7 24 24 24l48 0c13.3 0 24-10.7 24-24s10.7-24-24-24l-48 0zm128 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l112 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-112 0z"/>
                         </svg>
